# Executable-Network-Packets

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
core/: enp_packet.c
docs/: ENP-RESEARCH-AXES.md  ENP-SPEC-v3.md
include/: enp_logger.h  enp_net.h  enp_packet.h  enp_trace.h  enp_wasm.h
net/: enp_client.c  enp_server.c
sim/: enp_sim.c
utils/: enp_logger.c  enp_trace.c
wasm/: enp_wasm.c
